@@ -1,5 +1,6 @@
 package com.cafe.recognition;
 
+import com.cafe.main.CafeManagement;
 import com.cafe.utils.Resource;
 import org.bytedeco.javacpp.Loader;
 import org.bytedeco.opencv.opencv_java;
@@ -7,9 +8,11 @@ import org.opencv.core.Mat;
 import org.opencv.core.MatOfInt;
 import org.opencv.imgcodecs.Imgcodecs;
 
+import javax.swing.*;
 import java.io.File;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
@@ -24,7 +27,7 @@ public class Trainer {
         detector = new Detector();
         recognizer = new Recognizer();
         try {
-            Files.createDirectories(Path.of(Objects.requireNonNull(Resource.getAbsolutePath(CLASSIFIER_DIRECTORY))));
+            Files.createDirectories(Paths.get(Resource.getResourceOutsideJAR(CLASSIFIER_DIRECTORY)));
         } catch (Exception e) {
             System.out.println(e.getMessage());
         }
@@ -53,7 +56,7 @@ public class Trainer {
     }
 
     public void train(String customerID, double percentToSuccess) {
-        String imageDirPath = new File(Resource.getAbsolutePath(FACE_DIRECTORY), customerID).getPath();
+        String imageDirPath = new File(Resource.getResourceOutsideJAR(FACE_DIRECTORY), customerID).getPath();
         System.out.println(imageDirPath);
         List<Mat> faceSamples = new ArrayList<>();
         List<Integer> labels = new ArrayList<>();
@@ -72,8 +75,8 @@ public class Trainer {
             labels.add(label);
         }
         System.out.printf("Trained %d/%d images.%n", faceSamples.size(), numberOfImages);
-        if (faceSamples.size() == 0 || faceSamples.size() < numberOfImages * percentToSuccess / 100) {
-            System.out.println("Can't train the model. Please sign up your face again.");
+        if (faceSamples.isEmpty() || faceSamples.size() < numberOfImages * percentToSuccess / 100) {
+            JOptionPane.showMessageDialog(CafeManagement.homeGUI, "Không thể xử lý được khuôn mặt.\nHãy thử đăng ký gương mặt lại.");
             return;
         } else if (faceSamples.size() != numberOfImages) {
             System.out.println("Error images: " + errorImages);
@@ -81,7 +84,8 @@ public class Trainer {
         MatOfInt labelsMat = new MatOfInt();
         labelsMat.fromList(labels);
         recognizer.model.train(faceSamples, labelsMat);
-        recognizer.model.save(new File(Resource.getAbsolutePath(CLASSIFIER_DIRECTORY), customerID + ".xml").getPath());
+        recognizer.model.save(new File(Resource.getResourceOutsideJAR(CLASSIFIER_DIRECTORY), customerID + ".xml").getPath());
+        JOptionPane.showMessageDialog(CafeManagement.homeGUI, "Đăng ký gương mặt thành công.");
     }
 
     static {
